--- a/ShopOrderApp/Views/Home/Index.cshtml
+++ b/ShopOrderApp/Views/Home/Index.cshtml
@@ -1,4 +1,9 @@
-﻿
+﻿@using Ganedata.Core.Entities.Domain
+@using Ganedata.Core.Entities.Enums
+@using PagedList.Mvc
+@model PagedList.IPagedList<OrderProcess>
+
+
 @{
     ViewBag.Title = "Load Order In Truck";
 
@@ -8,229 +13,76 @@
 <section class="content">
 
     <div class="row">
-        <div class="col-12 col-xl-4">
-            <div class="box">
-                <div class="box-header with-border">
-                    <h4 class="box-title">Create Sales Order</h4>
-                    <div class="box">
-                        <div class="box-header with-border">
-                            <h4 class="box-title">Todo</h4>
-                            <ul class="box-controls pull-right d-md-flex d-none">
-                                <li class="dropdown">
-                                    <button class="btn btn-primary dropdown-toggle px-10 " data-bs-toggle="dropdown" href="#">Create</button>
-                                    <div class="dropdown-menu dropdown-menu-end">
-                                        <a class="dropdown-item" href="#"><i class="ti-import"></i> Import</a>
-                                        <a class="dropdown-item" href="#"><i class="ti-export"></i> Export</a>
-                                        <a class="dropdown-item" href="#"><i class="ti-printer"></i> Print</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#"><i class="ti-settings"></i> Settings</a>
-                                    </div>
-                                </li>
-                            </ul>
+        @foreach (var item in Model)
+        {
+            <div class="col-md-4 col-xx-12">
+                <div class="card">
+                    <div class="card-header">
+                        <h4 class="card-title">@item.Order.OrderNumber</h4>
+                        <ul class="box-controls pull-right d-md-flex">
+                            <li class="dropdown">
+                                <button class="btn btn-danger dropdown-toggle px-10" data-bs-toggle="dropdown" href="#" aria-expanded="true">@item.OrderProcessStatusId</button>
+                                <div class="dropdown-menu dropdown-menu-end" style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(0px, 473px, 0px);" data-popper-placement="bottom-end" data-popper-reference-hidden="" data-popper-escaped="">
+                                    <a class="dropdown-item" href="#"><i class="ti-import"></i>@OrderProcessStatusEnum.Loaded</a>
+                                    <a class="dropdown-item" href="#"><i class="ti-export"></i>@OrderProcessStatusEnum.Dispatched</a>
+                                </div>
+                            </li>
+                        </ul>
+                        @*<div class="header-elements">
+                                <span class="badge bg-danger badge-pill">@item.OrderProcessStatusId</span>
+                            </div>*@
+                    </div>
+
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <tbody>
+                                    <tr>
+                                        <td>Delivery Number</td>
+                                        <td>@item.DeliveryNO</td>
+
+                                    </tr>
+                                    <tr>
+                                        <td>Company Name</td>
+                                        <td style="word-wrap:anywhere">@item.Order.Account.CompanyName</td>
+
+                                    </tr>
+                                    <tr>
+                                        <td>Account Code</td>
+                                        <td>@item.Order.Account.AccountCode</td>
+
+                                    </tr>
+                                    <tr>
+                                        <td>Date Created</td>
+                                        <td>@item.DateCreated</td>
+
+                                    </tr>
+</table>
                         </div>
-                        <div class="box-body">
-                            <div class="d-flex align-items-center mb-25">
-                                <span class="bullet bullet-bar bg-success align-self-stretch"></span>
-                                <div class="h-20 mx-20 flex-shrink-0">
-                                    <input type="checkbox" id="md_checkbox_21" class="filled-in chk-col-success">
-                                    <label for="md_checkbox_21" class="h-20 p-10 mb-0"></label>
-                                </div>
+                    </div>
 
-                                <div class="d-flex flex-column flex-grow-1">
-                                    <a href="#" class="text-dark hover-success fw-500 fs-16">
-                                        Create FireStone Logo
-                                    </a>
-                                    <span class="text-fade fw-500">
-                                        Due in 2 Days
-                                    </span>
-                                </div>
-                                <div class="dropdown">
-                                    <a class="px-10 pt-5" href="#" data-bs-toggle="dropdown" aria-expanded="false"><i class="ti-more-alt"></i></a>
-                                    <div class="dropdown-menu dropdown-menu-end" style="">
-                                        <h6 class="dropdown-header">Choose Label:</h6>
-                                        <a class="dropdown-item flexbox" href="#">
-                                            <span class="badge badge-primary-light">Customer</span>
-                                        </a>
-                                        <a class="dropdown-item" href="#">
-                                            <span class="badge badge-danger-light">Partner</span>
-                                        </a>
-                                        <a class="dropdown-item" href="#">
-                                            <span class="badge badge-success-light">Suplier</span>
-                                        </a>
-                                        <a class="dropdown-item" href="#">
-                                            <span class="badge badge-info-light">Member</span>
-                                        </a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item flexbox" href="#">
-                                            <span>Add New</span>
-                                            <span class="badge badge-pill badge-default">+</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="d-flex align-items-center mb-25">
-                                <span class="bullet bullet-bar bg-primary align-self-stretch"></span>
-                                <div class="h-20 mx-20 flex-shrink-0">
-                                    <input type="checkbox" id="md_checkbox_22" class="filled-in chk-col-primary">
-                                    <label for="md_checkbox_22" class="h-20 p-10 mb-0"></label>
-                                </div>
-
-                                <div class="d-flex flex-column flex-grow-1">
-                                    <a href="#" class="text-dark hover-primary fw-500 fs-16">
-                                        Lorem ipsum dolor sit amet
-                                    </a>
-                                    <span class="text-fade fw-500">
-                                        Due in 2 Days
-                                    </span>
-                                </div>
-                                <div class="dropdown">
-                                    <a class="px-10 pt-5" href="#" data-bs-toggle="dropdown"><i class="ti-more-alt"></i></a>
-                                    <div class="dropdown-menu dropdown-menu-end">
-                                        <h6 class="dropdown-header">Choose Label:</h6>
-                                        <a class="dropdown-item flexbox" href="#">
-                                            <span class="badge badge-primary-light">Customer</span>
-                                        </a>
-                                        <a class="dropdown-item" href="#">
-                                            <span class="badge badge-danger-light">Partner</span>
-                                        </a>
-                                        <a class="dropdown-item" href="#">
-                                            <span class="badge badge-success-light">Suplier</span>
-                                        </a>
-                                        <a class="dropdown-item" href="#">
-                                            <span class="badge badge-info-light">Member</span>
-                                        </a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item flexbox" href="#">
-                                            <span>Add New</span>
-                                            <span class="badge badge-pill badge-default">+</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="d-flex align-items-center mb-25">
-                                <span class="bullet bullet-bar bg-danger align-self-stretch"></span>
-                                <div class="h-20 mx-20 flex-shrink-0">
-                                    <input type="checkbox" id="md_checkbox_23" class="filled-in chk-col-danger">
-                                    <label for="md_checkbox_23" class="h-20 p-10 mb-0"></label>
-                                </div>
-
-                                <div class="d-flex flex-column flex-grow-1">
-                                    <a href="#" class="text-dark hover-danger fw-500 fs-16">
-                                        Vivamus consectetur urna
-                                    </a>
-                                    <span class="text-fade fw-500">
-                                        Due in 2 Days
-                                    </span>
-                                </div>
-                                <div class="dropdown">
-                                    <a class="px-10 pt-5" href="#" data-bs-toggle="dropdown" aria-expanded="false"><i class="ti-more-alt"></i></a>
-                                    <div class="dropdown-menu dropdown-menu-end" style="">
-                                        <h6 class="dropdown-header">Choose Label:</h6>
-                                        <a class="dropdown-item flexbox" href="#">
-                                            <span class="badge badge-primary-light">Customer</span>
-                                        </a>
-                                        <a class="dropdown-item" href="#">
-                                            <span class="badge badge-danger-light">Partner</span>
-                                        </a>
-                                        <a class="dropdown-item" href="#">
-                                            <span class="badge badge-success-light">Suplier</span>
-                                        </a>
-                                        <a class="dropdown-item" href="#">
-                                            <span class="badge badge-info-light">Member</span>
-                                        </a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item flexbox" href="#">
-                                            <span>Add New</span>
-                                            <span class="badge badge-pill badge-default">+</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="d-flex align-items-center mb-25">
-                                <span class="bullet bullet-bar bg-info align-self-stretch"></span>
-                                <div class="h-20 mx-20 flex-shrink-0">
-                                    <input type="checkbox" id="md_checkbox_24" class="filled-in chk-col-info">
-                                    <label for="md_checkbox_24" class="h-20 p-10 mb-0"></label>
-                                </div>
-
-                                <div class="d-flex flex-column flex-grow-1">
-                                    <a href="#" class="text-dark hover-info fw-500 fs-16">
-                                        Sed quis augue sed augue
-                                    </a>
-                                    <span class="text-fade fw-500">
-                                        Due in 2 Days
-                                    </span>
-                                </div>
-                                <div class="dropdown">
-                                    <a class="px-10 pt-5" href="#" data-bs-toggle="dropdown"><i class="ti-more-alt"></i></a>
-                                    <div class="dropdown-menu dropdown-menu-end">
-                                        <h6 class="dropdown-header">Choose Label:</h6>
-                                        <a class="dropdown-item flexbox" href="#">
-                                            <span class="badge badge-primary-light">Customer</span>
-                                        </a>
-                                        <a class="dropdown-item" href="#">
-                                            <span class="badge badge-danger-light">Partner</span>
-                                        </a>
-                                        <a class="dropdown-item" href="#">
-                                            <span class="badge badge-success-light">Suplier</span>
-                                        </a>
-                                        <a class="dropdown-item" href="#">
-                                            <span class="badge badge-info-light">Member</span>
-                                        </a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item flexbox" href="#">
-                                            <span>Add New</span>
-                                            <span class="badge badge-pill badge-default">+</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="d-flex align-items-center mb-25">
-                                <span class="bullet bullet-bar bg-warning align-self-stretch"></span>
-                                <div class="h-20 mx-20 flex-shrink-0">
-                                    <input type="checkbox" id="md_checkbox_25" class="filled-in chk-col-warning">
-                                    <label for="md_checkbox_25" class="h-20 p-10 mb-0"></label>
-                                </div>
-
-                                <div class="d-flex flex-column flex-grow-1">
-                                    <a href="#" class="text-dark hover-warning fw-500 fs-16">
-                                        Aliquam in magna
-                                    </a>
-                                    <span class="text-fade fw-500">
-                                        Due in 2 Days
-                                    </span>
-                                </div>
-                                <div class="dropdown">
-                                    <a class="px-10 pt-5" href="#" data-bs-toggle="dropdown"><i class="ti-more-alt"></i></a>
-                                    <div class="dropdown-menu dropdown-menu-end">
-                                        <h6 class="dropdown-header">Choose Label:</h6>
-                                        <a class="dropdown-item flexbox" href="#">
-                                            <span class="badge badge-primary-light">Customer</span>
-                                        </a>
-                                        <a class="dropdown-item" href="#">
-                                            <span class="badge badge-danger-light">Partner</span>
-                                        </a>
-                                        <a class="dropdown-item" href="#">
-                                            <span class="badge badge-success-light">Suplier</span>
-                                        </a>
-                                        <a class="dropdown-item" href="#">
-                                            <span class="badge badge-info-light">Member</span>
-                                        </a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item flexbox" href="#">
-                                            <span>Add New</span>
-                                            <span class="badge badge-pill badge-default">+</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-
+                    <div class="card-footer">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Add comment...">
+                            <button class="btn bg-info btn-sm" type="button"><i class="fa fa-send-o"></i></button>
                         </div>
                     </div>
                 </div>
+
+
+
+
+
+
             </div>
 
-        </div>
+        }
+
+    </div>
+    <div class="pull-right">
+        @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page, pagesize = ViewBag.pageSize }))
+
+        @* <ul class="pagination"><li class="paginate_button page-item previous disabled" id="productorder_previous"><a href="#" aria-controls="productorder" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="productorder" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="productorder" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item next" id="productorder_next"><a href="#" aria-controls="productorder" data-dt-idx="3" tabindex="0" class="page-link">Next</a></li></ul>*@
     </div>
 
-    </section>
+</section>
