--- a/ShopOrderApp/Content/New/assets/icons/font-awesome/css/font-awesome.css
+++ b/ShopOrderApp/Content/New/assets/icons/font-awesome/css/font-awesome.css
@@ -6,8 +6,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('fontawesome-webfont.eot?v=4.7.0');
-  src: url('fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('fontawesome-webfont.woff?v=4.7.0') format('woff'), url('fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
+  src: url('https://warehouse-admin-dashboard.multipurposethemes.com/assets/icons/font-awesome/fonts/fontawesome-webfont.eot?v=4.7.0');
+  src: url('https://warehouse-admin-dashboard.multipurposethemes.com/assets/icons/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('https://warehouse-admin-dashboard.multipurposethemes.com/assets/icons/font-awesome/fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('https://warehouse-admin-dashboard.multipurposethemes.com/assets/icons/font-awesome/fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('https://warehouse-admin-dashboard.multipurposethemes.com/assets/icons/font-awesome/fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('https://warehouse-admin-dashboard.multipurposethemes.com/assets/icons/font-awesome/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
