--- a/ShopOrderApp/Views/Shared/LayoutPages/_TopHeader.cshtml
+++ b/ShopOrderApp/Views/Shared/LayoutPages/_TopHeader.cshtml
@@ -13,6 +13,124 @@
             </div>
         </a>
     </div>
+    <div class="navbar-custom-menu r-side">
+        <ul class="nav navbar-nav">
+            <li class="btn-group nav-item d-xl-inline-flex d-none">
+                <a href="findspace.html" class="waves-effect waves-light nav-link w-p100 full-screen btn-primary-light fs-18 l-h-26">
+                    Find A Sapce
+                </a>
+            </li>
+            <li class="btn-group nav-item d-xl-inline-flex d-none">
+                <a href="vendor.html" class="waves-effect waves-light nav-link w-p100 full-screen btn-primary-light fs-18 l-h-26">
+                    Vendor
+                </a>
+            </li>
+            <li class="btn-group nav-item d-xl-inline-flex d-none">
+                <a href="help.html" class="waves-effect waves-light nav-link w-p100 full-screen btn-primary-light fs-18 l-h-26">
+                    Help
+                </a>
+            </li>
+            <li class="btn-group nav-item d-xl-inline-flex d-none">
+                <a href="q&amp;a.html" class="waves-effect waves-light nav-link w-p100 full-screen btn-primary-light fs-18 l-h-26">
+                    Q&amp;A
+                </a>
+            </li>
+            <li class="btn-group nav-item d-lg-inline-flex d-none">
+                <a href="#" data-provide="fullscreen" class="waves-effect waves-light nav-link full-screen btn-warning-light" title="Full Screen">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-maximize"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>
+                </a>
+            </li>
+            <!-- Notifications -->
+            <li class="dropdown notifications-menu">
+                <a href="#" class="waves-effect waves-light dropdown-toggle btn-info-light" data-bs-toggle="dropdown" title="Notifications">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M22 17H2a3 3 0 0 0 3-3V9a7 7 0 0 1 14 0v5a3 3 0 0 0 3 3zm-8.27 4a2 2 0 0 1-3.46 0"></path></svg>
+                </a>
+                <ul class="dropdown-menu animated bounceIn">
+
+                    <li class="header">
+                        <div class="p-20">
+                            <div class="flexbox">
+                                <div>
+                                    <h4 class="mb-0 mt-0">Notifications</h4>
+                                </div>
+                                <div>
+                                    <a href="#" class="text-danger">Clear All</a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <!-- inner menu: contains the actual data -->
+                        <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 250px;">
+                            <ul class="menu sm-scrol" style="overflow: hidden; width: auto; height: 250px;">
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-users text-info"></i> Curabitur id eros quis nunc suscipit blandit.
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-warning text-warning"></i> Duis malesuada justo eu sapien elementum, in semper diam posuere.
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-users text-danger"></i> Donec at nisi sit amet tortor commodo porttitor pretium a erat.
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-shopping-cart text-success"></i> In gravida mauris et nisi
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-user text-danger"></i> Praesent eu lacus in libero dictum fermentum.
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-user text-primary"></i> Nunc fringilla lorem
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-user text-success"></i> Nullam euismod dolor ut quam interdum, at scelerisque ipsum imperdiet.
+                                    </a>
+                                </li>
+                            </ul><div class="slimScrollBar" style="background: rgb(0, 0, 0); width: 7px; position: absolute; top: 0px; opacity: 0.1; display: block; border-radius: 7px; z-index: 99; right: 1px;"></div><div class="slimScrollRail" style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; background: rgb(51, 51, 51); opacity: 0.2; z-index: 90; right: 1px;"></div>
+                        </div>
+                    </li>
+                    <li class="footer">
+                        <a href="#">View all</a>
+                    </li>
+                </ul>
+            </li>
+
+            <!-- Control Sidebar Toggle Button -->
+            <li class="btn-group nav-item">
+                <a href="#" data-toggle="control-sidebar" title="Setting" class="waves-effect full-screen waves-light btn-danger-light">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-settings"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
+                </a>
+            </li>
+
+            <!-- User Account-->
+            <li class="dropdown user user-menu">
+                <a href="#" class="waves-effect waves-light dropdown-toggle w-auto l-h-12 bg-transparent py-0 no-shadow" data-bs-toggle="dropdown" title="User">
+                    <img src="../images/avatar/avatar-1.png" class="avatar rounded-10 bg-primary-light h-40 w-40" alt="">
+                </a>
+                <ul class="dropdown-menu animated flipInX">
+                    <li class="user-body">
+                        <a class="dropdown-item" href="extra_profile.html"><i class="ti-user text-muted me-2"></i> Profile</a>
+                        <a class="dropdown-item" href="mailbox.html"><i class="ti-settings text-muted me-2"></i> Email</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="auth_login.html"><i class="ti-lock text-muted me-2"></i> Logout</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
     <!-- Header Navbar -->
     <nav class="navbar navbar-static-top">
 
@@ -28,6 +146,6 @@
 
     </nav>
 
-   
+
 </header>
 
