--- a/WMS/Views/Trucks/Edit.cshtml
+++ b/WMS/Views/Trucks/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Ganedata.Core.Entities.Domain.Truck
+﻿@model Ganedata.Core.Entities.Domain.MarketVehicle
 @using Ganedata.Core.Entities.Helpers
 
 @section scripts {
@@ -25,30 +25,38 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Id)
-    <div class="col-md-12">
-        <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.LabelFor(model => model.TruckName, htmlAttributes: new { @class = "control-label col-md-4" })
-            <div class="col-md-8">
-                @Html.EditorFor(model => model.TruckName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TruckName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="input-group h-100 justify-content-center align-items-center">
-            @Html.LabelFor(model => model.SortOrder, htmlAttributes: new { @class = "control-label col-md-4" })
-            <div class="col-md-8">
-                @Html.EditorFor(model => model.SortOrder, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SortOrder, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-
-        <div class="input-group h-100 justify-content-center align-items-center">
-            <div class="col-md-offset-2 col-md-10 bottom-right">
-                <input type="submit" value="Save" class="btn btn-primary" />
-                <div class="back-list">@Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })</div>
-            </div>
+<div class="col-md-12">
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-4" })
+        <div class="col-md-8">
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
         </div>
     </div>
-}
+
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-4" })
+        <div class="col-md-8">
+            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(model => model.VehicleIdentifier, htmlAttributes: new { @class = "control-label col-md-4" })
+        <div class="col-md-8">
+            @Html.EditorFor(model => model.VehicleIdentifier, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.VehicleIdentifier, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+
+
+    <div class="input-group h-100 justify-content-center align-items-center">
+        <div class="col-md-offset-2 col-md-10 bottom-right">
+            <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="back-list">@Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })</div>
+        </div>
+    </div>
+</div>
+
 }
